java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testCreateElement7-hints.pass
Create Method test(java.lang.String,java.lang.String,int) in org.netbeans.test.java.hints.CreateElement7
